--- a/src/main/webapp/courseMenu.html
+++ b/src/main/webapp/courseMenu.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "courseMenu.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "courseMenu_local.unity3d");
 			});
 			
 			
